namespaces/tm/tm/ingress.tm-django.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tm-django
  namespace: tm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tm.lan
      secretName: tm-django-tls
  rules:
    - host: tm.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tm-django
                port:
                  number: 8000
